# NeutronRadiation

./: .gitignore  LICENSE
data/: NeutronAttenuationRectangular-robert-laptop-2.csv  NeutronAttenuationRectangular-robert-laptop-3.csv  NeutronAttenuationRectangular-robert-laptop.csv  NeutronAttenuationRectangular.csv  NeutronAttenuationRectangularNEW.csv  NeutronAttenuationRectangularNEWNEW.csv
flukafiles/: 12ctst.inp  createfluka.py  flair-autosave.pickle  template.txt
g4beamline files/: NeutronCount.g4bl  WaterDetector.g4bl  g4bl-robert-laptop.out  g4bl.out
geant4/: .~lock.activation (copy).ods#  .~lock.activation.ods#  activation (copy).ods  activation.ods  activation.py  build.sh  dose-rangeshifter.ods  maketables.py  normalized.csv  one hour value.csv  out.csv  saturation.csv  saturation.json
geant4/bragg/: CMakeLists.txt  README  calorimeter_histogram.C  geometry.conf  main.cc
geant4/bragg/include/: Analysis.hh  Config.hh  DetectorConstruction.hh  EnergyTimeHit.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  StackingAction.hh
geant4/bragg/macros/: ui.mac
geant4/bragg/src/: ActionInitialization.cc  Config.cc  DetectorConstruction.cc  EnergyTimeSD.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  StackingAction.cc
mcnp files/: AWa.txt
python files/: AttenuationSpherical.py  GeometryTest-robert-laptop.py  GeometryTest.py  GeometryTest2.py  LeadNeutronMultiplicity-robert-laptop.py  LeadNeutronMultiplicity.py  NeutronAttenuation-robert-laptop.py  NeutronAttenuation.py  NeutronAttenuationRectangular-robert-laptop.py  (+19 more)
(+3019 files in other folders)
